create and use utils functions
